# vllm-on-dgxspark

./: .env.example  .gitignore  AGENTS.md  Makefile  pyproject.toml  requirements.txt
examples/: bench_vllm_embeddings.py
scripts/: rq-consumer.sh  rq-producer.py  serve-qwen3.6.sh  serve-voyage.sh  serve.sh
vllm_on_dgxspark/: __init__.py
