[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = [
  "av",
  "psutil",
  "pydantic>=2",
  "soundfile",
  "torch>=2.11.0,<3.0.0",
  "torchvision",
  "vllm>=0.20.0,<1.0.0",
]
description = "Validate local os installation of vllm on dgxspark"
license = { text = "MIT" }
name = "vllm-on-dgxspark"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "black[jupyter]",
  "isort",
  "logging-bullet-train",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-env",
  "pytest-xdist",
  "rich",
  "rich-color-support",
  "setuptools",
  "twine",
]

[project.urls]
Homepage = "https://github.com/allen2c/vllm-on-dgxspark"
"PyPI" = "https://pypi.org/project/vllm-on-dgxspark/"
Repository = "https://github.com/allen2c/vllm-on-dgxspark"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.18.0"]

[tool.hatch.build.targets.wheel]
packages = ["vllm_on_dgxspark"]

[tool.hatch.build.targets.sdist]
exclude = ["/.venv", "/.venv-*", "/ENV", "/env", "/venv"]

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
env = ["ENVIRONMENT=test", "PYTEST_IS_RUNNING=true"]
